# High-Frequency-Statistical-Arbitrage-Strategy-Development

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  build_and_run.sh  docker-compose.yml  mkdocs.yml  setup_github.sh
.github/workflows/: ci.yml
config/: backtest_config.yaml
cpp/: CMakeLists.txt
cpp/include/: order_book.h  types.h
cpp/src/: market_data_pipeline.cpp  order_book.cpp
cpp/tests/: CMakeLists.txt  test_order_book.cpp
docs/: index.md  strategy_overview.md
gpu/python/: monte_carlo_pricing.py
python/: requirements.txt
python/backtesting/: run_backtest.py
python/src/: alpha_generation.py  deep_q_execution.py
python/tests/: __init__.py  test_alpha_generation.py
